added query filter parameters in RequestFilters, controller, repo, service.
